syntax = "proto3";
package alliance;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "alliance/params.proto";

option go_package = "github.com/terra-money/alliance/x/alliance/types";

message Delegation {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;

  // delegator_address is the bech32-encoded address of the delegator.
  string delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // validator_address is the bech32-encoded address of the validator.
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // denom of token staked
  string denom = 3;
  // shares define the delegation shares received.
  string shares = 4 [
  (cosmos_proto.scalar)  = "cosmos.Dec",
  (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
  (gogoproto.nullable)   = false
  ];
  repeated RewardHistory reward_history = 5 [
    (gogoproto.nullable)   = false
  ];
  uint64 last_reward_claim_height = 6;
}

message Undelegation {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;

  string delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin balance = 3 [(gogoproto.nullable) = false];
}

message QueuedUndelegation {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  repeated Undelegation entries = 1;
}

message AllianceValidatorInfo {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  repeated RewardHistory global_reward_history = 1 [
    (gogoproto.nullable)   = false
  ];
  repeated cosmos.base.v1beta1.DecCoin total_delegator_shares = 2 [
    (gogoproto.nullable)   = false
  ];
  repeated cosmos.base.v1beta1.DecCoin validator_shares = 3 [
    (gogoproto.nullable)   = false
  ];
}