syntax = "proto3";
package alliance;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/base/v1beta1/coin.proto";
import "alliance/params.proto";
import "alliance/alliance.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/terra-money/alliance/x/alliance/types";

service Msg {
  rpc Delegate(MsgDelegate) returns (MsgDelegateResponse);
  rpc Redelegate(MsgRedelegate) returns(MsgRedelegateResponse);
  rpc Undelegate(MsgUndelegate) returns(MsgUndelegateResponse);
  rpc ClaimDelegationRewards(MsgClaimDelegationRewards) returns(MsgClaimDelegationRewardsResponse);
  // Gov
  rpc UpdateParams(MsgUpdateParams) returns(MsgUpdateParamsResponse);
  rpc CreateAlliance(MsgCreateAlliance) returns(MsgCreateAllianceResponse);
  rpc UpdateAlliance(MsgUpdateAlliance) returns(MsgUpdateAllianceResponse);
  rpc DeleteAlliance(MsgDeleteAlliance) returns(MsgDeleteAllianceResponse);
}

message MsgDelegate {
  option (cosmos.msg.v1.signer) = "delegator_address";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}
message MsgDelegateResponse {}

message MsgUndelegate {
  option (cosmos.msg.v1.signer) = "delegator_address";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

message MsgUndelegateResponse {}

message MsgRedelegate {
  option (cosmos.msg.v1.signer) = "delegator_address";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string                   delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_src_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_dst_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  cosmos.base.v1beta1.Coin amount = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

message MsgRedelegateResponse {}

message MsgClaimDelegationRewards {
  option (cosmos.msg.v1.signer) = "delegator_address";

  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string                   delegator_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   validator_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   denom = 3;
}

message MsgClaimDelegationRewardsResponse {}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  Params plan    = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateParamsResponse {}

message MsgCreateAlliance {
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  CreateAlliance plan    = 2 [(gogoproto.nullable) = false];
}

message MsgCreateAllianceResponse {}

message MsgUpdateAlliance {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  UpdateAlliance plan    = 2 [(gogoproto.nullable) = false];
}

message MsgUpdateAllianceResponse {}

message MsgDeleteAlliance {
  option (cosmos.msg.v1.signer) = "authority";

  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  DeleteAlliance plan    = 2 [(gogoproto.nullable) = false];
}

message MsgDeleteAllianceResponse {}
